# shakedown

./: .gitignore  dune  game-search.ml  trap.install  trap.opam
_build/: .db  .digest-db  .to-delete-in-source-tree  log
_build/.aliases/default/: install-00000000000000000000000000000000
_build/default/: .merlin  trap.install  trap.ml  trap.pp.ml  trap.version.sexp
_build/default/.ppx/b779814734b129f220be9ea6a55b7a7c/: ppx.cmi  ppx.cmx
_build/default/.trap.eobjs/: trap.cmi  trap.cmo  trap.cmt  trap.cmx  trap.pp.ml.d
_build/install/default/lib/trap/: META  opam
src/: common.ml  cube.ml  dune  eight-moves.ml  eight.ml  eight_moves.ml  eight_puzzle.ml  game.ml  search.ml  shakedown.ml
