opam-version: "2.0"
name: "Game Search"
synopsis: "A generalized game search framework"
version: "0.2"

maintainer: "coby@case.edu"
authors: ["Jacob Rosales Chase <coby@case.edu>"]
license: "MIT"

homepage: "https://github.com/RosalesJ/tldr-ocaml/"
bug-reports: "https://github.com/RosalesJ/tldr-ocaml/issues"
dev-repo: "git+https://github.com/RosalesJ/tldr-ocaml.git"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "dune" {build}
  "ppx_sexp_conv"
  "ppx_compare"
  "ppx_deriving"
  "core" {>= "v0.10.0"}]
